kubernetes/toolsearchapp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: toolsearchapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: toolsearchapp
  template:
    metadata:
      labels:
        app: toolsearchapp
    spec:
      containers:
        - name: toolsearchapp
          image: 440744246551.dkr.ecr.us-east-1.amazonaws.com/toolsearchapp:latest
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: toolsearchapp
  # annotations:
  #   service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
  #   service.beta.kubernetes.io/aws-load-balancer-scheme: "internet-facing"
spec:
  selector:
    app: toolsearchapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
